# priorart

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  SPEC.md  docker-compose.yml  models.yaml  pyproject.toml
.github/: REPO-METADATA.md
.github/workflows/: eval-regression.yml
configs/: bm25.yaml  dense_bge_m3.yaml  hybrid_rrf.yaml
data/cache/: corpus_embeddings.npz  eval_query_embeddings.npz
data/snapshots/: corpus_2026-06-30.manifest.json  corpus_smoke.manifest.json  hn_show_2026-06-29.jsonl  hn_show_2026-06-29.manifest.json  producthunt_2026-06-29.borderline.jsonl  producthunt_2026-06-29.jsonl  producthunt_2026-06-29.manifest.json  yc_2026-06-08.jsonl  yc_2026-06-08.manifest.json
docs/: ARCHITECTURE.md  EVAL.md  LANDSCAPE.md  METHODOLOGY.md  OPERATIONS.md  PHASE-1.md  PHASE-2.md  PHASE-3.md  PHASE-4.md
docs/assets/: demo.cast  failure-breakdown-bm25.md  failure-breakdown-dense_bge_m3.md  failure-breakdown-hybrid_rrf.md  fpr-on-novel-breakdown-bm25.md  fpr-on-novel-breakdown-dense_bge_m3.md  fpr-on-novel-breakdown-hybrid_rrf.md
eval/: __init__.py  run.py
evals/: labeled_v100.README.md  labeled_v100.jsonl  labeled_v100_llm_v1.README.md  labeled_v100_llm_v1.jsonl  labeled_v300.README.md  labeled_v300.jsonl
results/: eval.duckdb  failure-breakdown.csv  leaderboard.bm25.labeled_v300.md  leaderboard.csv  leaderboard.dense_bge_m3.labeled_v300.csv  leaderboard.dense_bge_m3.labeled_v300.md  leaderboard.hybrid_rrf.labeled_v300.md  leaderboard.md  leaderboard_row.dense_bge_m3.labeled_v300.csv  per_record.dense_bge_m3.labeled_v300.csv
scripts/: build_business_categories.py  build_corpus_embeddings_npz.py  build_eval_query_embeddings.py  build_labeled_v100.py  build_labeled_v300.py  demo.sh  render_leaderboard.py  render_leaderboard_screenshot.py  render_leaderboard_v2_screenshot.py  run_failure_breakdown.py  smoke.py
scripts/ci/: __init__.py  eval_gate.py  leaderboard_diff.py  run_eval_sweep.py
src/: __init__.py  config.py
src/api/: __init__.py  analyze.py  app.py  db.py  search.py  workflows.py
src/dagster_assets/: __init__.py  assets.py  definitions.py
src/dagster_assets/sensors/: __init__.py  config_change_sensor.py
src/data/: __init__.py  chunking.py  corpus_build.py  corpus_finalize.py  db.py  embedder.py  ingest.py  load_corpus_embeddings.py  migrate.py  models.py  scrape_hn.py  scrape_ph.py  scrape_yc.py
src/eval/: __init__.py  benchmark.py  calibration.py  categorize.py  config.py  failure_analysis.py  metrics.py  mlflow_logger.py  offline_search.py  run.py
src/frontend/: __init__.py  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
src/frontend/src/: App.tsx
src/frontend/src/components/: IdeaAnalyzer.tsx
src/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
src/frontend/src/lib/: api.ts  marketScope.ts
src/llm/: __init__.py  compare.py  schemas.py
src/llm/prompts/: __init__.py  compare.py
src/observability/: __init__.py  langfuse.py
src/workflow/: __init__.py  activities.py  client.py  market_scope_web.py  shared.py  web_fallback.py  worker.py  workflows.py
tests/: conftest.py  test_analyze.py  test_calibration.py  test_chunking.py  test_compare.py  test_corpus_build.py  test_corpus_finalize.py  test_eval.py  test_health.py  test_ingest.py  test_langfuse.py  test_market_scope_web.py  test_mlflow_logger.py  test_models_db.py  test_phase29_modes.py  test_phase31_dagster.py  test_phase32_sensor.py  test_phase34_categories.py  test_phase36_workflow.py  test_phase41_market_scope_envelope.py  test_scrape_hn.py  test_scrape_ph.py  test_scrape_yc.py  test_search.py  test_search_modes.py  test_workflows.py
