[project]
name = "priorart"
version = "0.1.0"
description = "Startup-idea deduplication & competitor-research service (YC public corpus, pgvector + bge-m3, Claude structured output)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Anurag Parida" },
]
dependencies = [
    # Web layer
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    # Data layer
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    # Retrieval / ML
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2.2",
    # LLM
    "instructor>=1.3",
    "anthropic>=0.39",
    # Eval / data
    "duckdb>=1.0",
    # Testing
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
# CLI entrypoints (filled out in later phases; placeholders here)
# priorart-scrape = "src.data.scrape_yc:main"
# priorart-ingest = "src.data.ingest:main"
# priorart-eval = "src.eval.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
