[project]
name = "priorart"
version = "0.1.0"
description = "Startup-idea deduplication & competitor-research service (YC public corpus, pgvector + bge-m3, Claude structured output)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Anurag Parida" },
]
dependencies = [
    # Web layer
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    # Data layer
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    # Retrieval / ML
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2.2",
    # LLM
    "instructor>=1.3",
    "anthropic>=0.39",
    # Observability — Langfuse wraps every LLM call (Phase 2.3).
    # Pinned to the 2.x line (we run the v2 SDK on this host; the
    # Langfuse container is ``langfuse/langfuse:2`` per AGENTS.md,
    # not v3 which hard-requires ClickHouse + Redis + MinIO).
    "langfuse>=2.50,<3",
    # Eval / data
    "duckdb>=1.0",
    # Testing
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mlflow>=3.14.0",
    # Dagster (Phase 3.1). The ``dagster`` SDK alone isn't enough for
    # ``dagster dev`` — that command requires ``dagster-webserver``
    # too (Dagster split it out as a separate package in 1.7+). The
    # 1.13.x line is the LTS the project is on (PHASE-3.md §3.1).
    "dagster>=1.13.11",
    "dagster-webserver>=1.13.11",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
# CLI entrypoints
priorart-scrape = "src.data.scrape_yc:app"
priorart-scrape-hn = "src.data.scrape_hn:app"
priorart-ingest = "src.data.ingest:app"
priorart-eval = "eval.run:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
